--- a/lab2.html
+++ b/lab2.html
@@ -11,9 +11,9 @@
         <h2>New York - Central Park</h2>
         <nav>
             <ul>
-                <li>Description</li>
-                <li>Reviews</li>
-                <li>Related Photos</li>
+                <li><a href="#description">Description</a></li>
+                <li><a href="#reviews">Reviews</a></li>
+                <li><a href="#related photos">Related Photos</a></li>
             </ul>
         </nav>
     </header>
@@ -33,7 +33,7 @@
             </figure>
         </section>
         <section>
-            <h3> Related Photos </h3>
+            <h3 id="related photos"> Related Photos </h3>
             <a href="images/related-large1.jpg"><img src="images/related-square1.jpg" alt="square1" title="Wiese" /></a>
             <a href="images/related-large2.jpg"><img src="images/related-square2.jpg" alt="square2" title="Wolken"/></a>
             <a href="images/related-large3.jpg"><img src="images/related-square3.jpg" alt="square3" title="Hochhaus"/></a>
