--- a/final_project/dining.html
+++ b/final_project/dining.html
@@ -3,3 +3,11 @@
     <title>WITInfo -  Dining</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+<body>
+    <header class="header">
+        <div style="position: absolute; top: 0; left: 0; width: 100px; text-align:right; font-weight: bold">
+            <a href="home.html"> <big> Home </big></a>
+        </div>
+        <h1 align="center" class="text-xl">Dining</h1>
+    </header>
+</body>
